--- a/physor.bib
+++ b/physor.bib
@@ -88,3 +88,13 @@ url="https://doi.org/10.1007/978-3-642-58113-7_227"
  title = {Binary Formulation of Decay Equations},
  year = {2015}
 }
+
+@inproceedings{bateman1910solution,
+  title={The solution of a system of differential equations occurring in the theory of radioactive transformations},
+  author={Bateman, Harry},
+  booktitle={Proc. Cambridge Philos. Soc},
+  volume={15},
+  number={pt V},
+  pages={423--427},
+  year={1910}
+}
