--- a/physor2018-scopatz.tex
+++ b/physor2018-scopatz.tex
@@ -73,7 +73,8 @@ well within floating point precision for most nuclides and times.
 
 \section{INTRODUCTION}
 \label{sec-intro}
-The Bateman equations governing radioactive decay are an important subexpression
+The Bateman equations \cite{bateman1910solution} governing radioactive decay are an
+important subexpression
 of the generalized transmutation equations. In many cases, it is desirable to compute
 decay on its own, outside of the presence of any neutron or photon field. In this
 case, radioactive decay is a function solely of intrinsic physical parameters:
@@ -448,7 +449,7 @@ assumptions should be revisited.
 \label{sec-verify}
 This section contains two comparisons of the binary Bateman equations
 as presented in Eq. (\ref{final-form-a})-(\ref{k-bin-pq-degen-0}). These
-comparisons verify that the method described here is correct, up to
+comparisons verify that the method described here is correct up to
 floating point error. The first comparison simply verifies that the
 initial nuclide decays properly. The second and more involved comparison
 uses the Chebyshev Rational Approximation Method (CRAM)
@@ -456,26 +457,19 @@ for transmutation \cite{pusa2010computing,pusa2012correction} as the point
 of comparison.
 
 In the comparisons here, 3491 nuclides were decayed from an initial unit
-concentration. Decays took place on a log-uniform grid from $10$ to $10^{20}$
-seconds. Including $t=0$, there are 40 points in the time grid. This grid
-compares spans times domains that are generally of interest to nuclear
+concentration. Decays took place on a log-uniform time grid from $10$ to $10^{20}$
+seconds. Including $t=0$, there were 40 points in the time grid. This grid
+spans times domains that are generally of interest to nuclear
 engineers. This nuclide \& time comparison thus provides a set of 139640
 decayed compositions to compare.
 
 \subsection{$N_1(t)$ Comparison}
 \label{subsec-n1}
 For this first comparison, note that the solution for the initial nuclide is
-the relatively simple $N_1(t) = e^{-\lambda_1 t}$. Since this is analytic and
+the relatively simple $N_1(t) = e^{-\lambda_1 t}$, as $N_1(0) = 1$. Since this is analytic and
 easy to compute, the binary Bateman solver ought to compute this same
 value to within floating point error.  Call $b(t)$ the concentration of the
 same initial nuclide as computed by the binary Bateman solver.
-
-Fig.~\ref{fig-n1} shows the absolute value of the difference between
-the traditional Bateman solution $e^{-\lambda_1 t}$ and the binary
-solution presented here. The gray lines show the difference as a function
-of time for individual, representative nuclides in the set analyzed.
-The red curve in Fig.~\ref{fig-n1} displays the mean difference over all
-times, along with one standard deviation error bars.
 
 \begin{figure}[!htb]
   \centering
@@ -489,13 +483,20 @@ times, along with one standard deviation error bars.
   \label{fig-n1}
 \end{figure}
 
+Fig.~\ref{fig-n1} shows the absolute value of the difference between
+the traditional Bateman solution $e^{-\lambda_1 t}$ and the binary
+solver described above. The gray lines show the difference as a function
+of time for individual, representative nuclides in the set analyzed.
+The red curve in Fig.~\ref{fig-n1} displays the mean difference over all
+times, along with one standard deviation error bars.
+
 As can be seen from Fig.~\ref{fig-n1}, the mean difference tends to zero for
 higher decay times.  Moreover, this mean difference curve itself seems to
 follow an exponential decay. Importantly, all values in Fig.~\ref{fig-n1}
 fall within what could be reasonably expected for floating point error for
 \texttt{double} precision computation. Additionally, the gray curves
 demonstrate that for some individual nuclides, the difference has a minimum
-modal bound. These can be as high as $2.2\times 10^{-16}$. This higher
+modal bound. These can be as high as $2.2\times 10^{-16}$. These higher
 difference modes persist at long time scales, even as the mean difference
 tends to zero.
 
@@ -508,10 +509,10 @@ while the binary Bateman solver is code generated using a custom algorithm.
 For the CRAM solver, a decay-only matrix can be constructed from the
 fundamental nuclear data. This decay-only matrix, thus, does not include
 any transmutation from neutron interactions. This usage is distinct from
-most usages of CRAM, which typically are focused on depletion calculation.
+most CRAM applications, which are typically focused on depletion calculation.
 
 To create a fair comparison, both solvers where generated from the same
-fundamental set of nuclear data. Half-lives and branch
+nuclear data. Half-lives and branch
 ratios came from the May 1$^{\mathrm{st}}$, 2017 release of ENSDF
 \cite{Bhat1992,ensdfmaintained}. Fission product yield data was obtained
 from published WIMS-D results \cite{aldama2003wims}. Therefore, any differences
@@ -521,7 +522,7 @@ solver can be ascribed to differences in methodology, not differences in data.
 However, it should be noted that CRAM is an approximation and the Bateman
 equations are the analytic solution. Therefore, we should expect differences
 between these two methods up to the approximation order of CRAM. In practice,
-the CRAM order is chosen to be at the level of floating point arithmetic.
+the CRAM order is chosen to be at the level of floating point precision.
 Since we generally are dealing with \texttt{double} data (64-bit), rather than
 \texttt{float} data (32-bit), the floating point error is expected to be
 approximately $10^{-16}$ for an initial unit atom density $N_1(0) = 1$.
@@ -537,8 +538,8 @@ Thus the CRAM approximation order is chosen as 16 in the comparison here.
   \label{fig-diff-hist}
 \end{figure}
 
-Call $b(t, i\to j)$ the binary Bateman concentration of the \jth nuclide
-coming from an initial unit concentration of the \ith nuclide at time $t$.
+Call $b(t, i\to j)$ the binary Bateman concentration at time $t$ of the \jth nuclide
+coming from an initial unit concentration.
 Also denote $r_{16,16}(t, i\to j)$ as this same value, but instead as computed
 by a $16^{\mathrm{th}}$ order CRAM approximation. Fig.~\ref{fig-diff-hist}
 displays a histogram of the absolute value of the difference between
@@ -546,18 +547,19 @@ $b(t, i\to j)$ and $r_{16,16}(t, i\to j)$ for all $i \to j$ for all times.
 This histogram is binned by decade from $10^{-32}$ to $1$.
 
 As can be seen in Fig.~\ref{fig-diff-hist}, the overwhelming majority of
-decay compositions that are computed fall within floating point precision
+decay compositions which are computed fall within floating point precision
 ($\le 10^{-16}$). For those times and nuclides which are not within precision,
 many of the remaining differences are within what might be considered
-expected floating point error for many arithmetic operations ($\le 10^{-8}$).
+expected floating point error after many arithmetic operations ($\le 10^{-8}$).
 
-This still leaves a handful (around 600 of millions) of nuclides and times
+This still leaves a handful of nuclides and times (around 600)
 where the difference is beyond acceptable floating point errors. Since differences
-in data may be discounted, these errors are likely caused by CRAM solves
-having relatively inaccurate eigenvalues for the decay problem. CRAM performs
-far more arithmetic operations when inverting the decay matrix the binary Bateman
-solver. This occasionally leads to catastrophic floating point cancellation
-issues and results in the high errors seen here.
+in data may be discounted, these errors are likely caused by CRAM solves.
+CRAM happens to have relatively inaccurate eigenvalues for the decay problem. Additionally,
+CRAM performs
+far more arithmetic operations when inverting the decay matrix than the binary Bateman
+solver performs. This occasionally leads to catastrophic floating point cancellation
+issues and may also result in the high errors seen here.
 
 Still, even though certain cases have high errors, no error exceeds 0.1.
 Additionally, the nuclides which have differences in excess of $10^{-4}$
@@ -571,14 +573,14 @@ to traditional nuclear engineering applications.
 \label{sec-conc}
 
 In summary, the binary formulation of the traditional Bateman equations
-is a fast and correct solver for radioactive decay problems. Because this
+is the mathematical basis for a fast and correct solver for radioactive decay problems. Because this
 method minimizes run time arithmetic operations and takes advantage of
 \texttt{exp2()} speed over \texttt{exp()}, the solver here can be orders of
 magnitude faster than alternatives. Furthermore, in comparison to CRAM used
 for the same problem, the binary solver is correct to within floating point
 error for almost all cases. Those differences with CRAM which are
 unreasonably high stem from the approximations that CRAM makes. These
-approximations involve inverting many matrices CRAM, thus, requires many
+approximations involve inverting many matrices. CRAM, thus, requires many
 more arithmetic operations and much longer run times.
 
 The advantage of deriving the limiting cases for the binary Bateman solver
