--- a/physor2018-scopatz.tex
+++ b/physor2018-scopatz.tex
@@ -84,7 +84,7 @@ the traditional expression. Unlike previous work along these lines
 \cite{scopatz2015decay}, the formulation presented here aims to remove the
 assumption that the nuclear data is well-behaved.
 
-The fundemental nuclear data is not well-behaved. There are degeneracies in
+The fundamental nuclear data is not well-behaved. There are degeneracies in
 half-lives. There are cases where prominent nuclides (such as U-238) are
 almost stable relative to floating point precision. Since these issues
 cannot be tackled in the data itself, they must be handled by the
@@ -230,7 +230,7 @@ $\lambda_p \ll \lambda_{i\ne p,C}$.
 \end{equation}
 
 Lastly, there remains degenerate case where two nuclides in a chain have the same exact half-lives.
-This unfortunate situation arises out of the fundemental nuclear data. For example,
+This unfortunate situation arises out of the fundamental nuclear data. For example,
 \begin{enumerate}
 \item Lu-153 $\alpha$-decays to Tm-149, both nuclides have half-lives of 0.9 seconds.
 \item Ir-172 $\alpha$-decays to Re-168, both nuclides have half-lives of 4.4 seconds.
@@ -478,7 +478,7 @@ same initial nuclide as computed by the binary Bateman solver.
            binary Bateman solution for all 3491 nuclides. The red line
            is the average of the absolute value of difference with
            error bars representing 1 standard deviation. The gray lines
-           are curves for a subselection of example nuclides which comprise
+           are curves for a sub-selection of example nuclides which comprise
            the mean.}
   \label{fig-n1}
 \end{figure}
