Use more consistant index notation in a product

--- a/physor2018-scopatz.tex
+++ b/physor2018-scopatz.tex
@@ -293,7 +293,7 @@ where the coefficients $k_i$ are defined as follows:
 \begin{equation}
 \label{k-last-stable-0}
 \begin{split}
-    k_{i\ne C} = & -\gamma \prod_{j=1,i\ne j}^{C-1} \frac{\lambda_j}{\lambda_j - \lambda_i} \\
+    k_{i\ne C} = & -\gamma \prod_{j\ne i}^{C-1} \frac{\lambda_j}{\lambda_j - \lambda_i} \\
     k_C = & \gamma
 \end{split}
 \end{equation}
