--- a/physor2018-scopatz.tex
+++ b/physor2018-scopatz.tex
@@ -452,7 +452,7 @@ of comparison.
 In the comparisons here, 3491 nuclides were decayed from an initial unit
 concentration. Decays took place on a log-uniform time grid from $10$ to $10^{20}$
 seconds. Including $t=0$, there were 40 points in the time grid. This grid
-spans times domains that are generally of interest to nuclear
+spans time domains that are generally of interest to nuclear
 engineers. This nuclide \& time comparison thus provides a set of 139640
 decayed compositions to compare.
 
