--- a/physor2018-scopatz.tex
+++ b/physor2018-scopatz.tex
@@ -504,7 +504,7 @@ fundamental nuclear data. This decay-only matrix, thus, does not include
 any transmutation from neutron interactions. This usage is distinct from
 most CRAM applications, which are typically focused on depletion calculation.
 
-To create a fair comparison, both solvers where generated from the same
+To create a fair comparison, both solvers were generated from the same
 nuclear data. Half-lives and branch
 ratios came from the May 1$^{\mathrm{st}}$, 2017 release of ENSDF
 \cite{Bhat1992,ensdfmaintained}. Fission product yield data was obtained
