--- a/physor2018-scopatz.tex
+++ b/physor2018-scopatz.tex
@@ -48,6 +48,7 @@
            {Scopatz and Meurer}
 \newcommand{\shortTitle}      % Short title here (Shorten to fit all into a single line)
            {Limiting Cases of the Binary Formulation of Decay Equations}
+\renewcommand{\thetable}{\Roman{table}}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
 %   BEGIN DOCUMENT
