--- a/physor2018-scopatz.tex
+++ b/physor2018-scopatz.tex
@@ -619,6 +619,12 @@ $a_i$                & 1/seconds & Negative inverse of half-life, $-1/t_{1/2,i}$
 \end{tabular}
 \end{table}
 
+\section*{ACKNOWLEDGEMENTS}
+\label{sec-ack}
+This work was funded in part by the University of South Carolina. The authors
+wish to express our gratitude.
+
+
 % Bibliography
 \setlength{\baselineskip}{12pt}
 \bibliographystyle{physor}
